# msa-daemon

./: CMakeLists.txt  CPackSettings.cmake
src/: FileUtil.cpp  FileUtil.h  MsaErrors.h  MsaService.cpp  MsaService.h  MsaUiClient.cpp  MsaUiClient.h  MsaUiHelper.cpp  MsaUiHelper.h  MsaUiLauncher.cpp  MsaUiLauncher.h  main.cpp
